Fixing 3598. Separated $spacing-values into $spacing-values-margin and $spacing-values-padding — since attribute "margin" allows value of "auto" whereas attribute "padding" does not. Great "ugly fix" from Gerarddus https://github.com/jgthms/bulma/issues/3598#issuecomment-1651532113 to open issue  "Bulma's CSS sets padding atttribute to auto which is invalid #3598" https://github.com/jgthms/bulma/issues/3598#

--- a/sass/helpers/spacing.sass
+++ b/sass/helpers/spacing.sass
@@ -8,7 +8,15 @@ $spacing-shortcuts: ("margin": "m", "padding": "p") !default
 $spacing-directions: ("top": "t", "right": "r", "bottom": "b", "left": "l") !default
 $spacing-horizontal: "x" !default
 $spacing-vertical: "y" !default
-$spacing-values: ("0": 0, "1": 0.25rem, "2": 0.5rem, "3": 0.75rem, "4": 1rem, "5": 1.5rem, "6": 3rem, "auto": auto) !default
+$spacing-values-margin: ("0": 0, "1": 0.25rem, "2": 0.5rem, "3": 0.75rem, "4": 1rem, "5": 1.5rem, "6": 3rem, "auto": auto) !default
+$spacing-values-padding: ("0": 0, "1": 0.25rem, "2": 0.5rem, "3": 0.75rem, "4": 1rem, "5": 1.5rem, "6": 3rem) !default
+$spacing-values: () !default
+
+@each $property, $shortcut in $spacing-shortcuts
+  @if $shortcut == "m"
+    $spacing-values: $spacing-values-margin
+  @else
+    $spacing-values: $spacing-values-padding
 
 @each $property, $shortcut in $spacing-shortcuts
   @each $name, $value in $spacing-values
